packages/cashc/test/compiler/ParseError/invalid_date.cash
pragma radiantscript ^1.0.0;

contract Test() {
    return {
        test() {
            int d = date("not a date");
            require(d == 0);
        }
    }
}
